<resources>
    <string name="app_name">Blood YEF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="signout">SignOut</string>
    <string name="view">view</string>
    <string name="address">address</string>
    <string name="email">email</string>
    <string name="app_name1">Firebase Auth</string>
    <string name="action_sign_in_short">Register</string>
    <string name="emaill">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email2">Email</string>
    <string name="password2">Password</string>
    <string name="todo2">TODO</string>
    <string name="email3">Email</string>
    <string name="password3">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password??</string>
    <string name="register">Register</string>
    <string name="new_password">New Password</string>
    <string name="password">Password</string>
    <string name="change_password1">Change password</string>
    <string name="dont_have_an_account_regsiter">Dont have an Account??Regsiter..</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_bloodtype">Enter BloodType</string>
    <string name="jessyka_swan">Jessyka swan</string>
    <string name="team_leader">Team leader</string>
    <string name="invited">Invited</string>
    <string name="blood_type">Blood Type</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_email">Enter Email</string>
    <string name="mobile_number1">mobile number</string>
    <string name="save">Save</string>
    <string name="enter_bloodtype1">Enter Bloodtype</string>
    <string name="view_userdetails">view Userdetails</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="post_your_blood_request">Post Your Blood Request</string>
    <string name="enter_your_blood_type">Enter Your Blood-Type</string>
    <string name="enter_your_city">enter your city</string>
    <string name="submit"><![CDATA[submit >>]]></string>
    <string name="Enter_Your_City" />
    <string name="enter_your_city1">Enter_Your_City</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="post"><![CDATA[<<Post>>]]></string>
    <string name="hospital_name">Hospital Name</string>
    <string name="your_description" />
    <string name="your_description1">Your description</string>
    <string name="sign_out" />
    <string name="SiignOut">Sign Out</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="users_list">Users List</string>
    <string name="mail_to_us" />
    <string name="call_us">call us</string>
    <string name="mail_to_usq">mail to us</string>
    <string name="view_details">View Details</string>
    <string name="blood">Blood</string>
    <string name="address1">Address</string>
    <string name="addresss">Addresss</string>
    <string name="desription">Desription</string>
    <string name="bloodgroup">BloodGroup</string>
    <string name="address2">Address</string>
    <string name="click_below_button_to_view_users_details">Click Below Button to view Users Details</string>
    <string name="back"><![CDATA[Back->]]></string>
    <string name="blood_donation">Blood Donation</string>
    <string name="blood_donation_android_com">Blood Donation@android.com</string>
    <string name="button">Button</string>
    <string name="send">Send</string>
    <string name="blooddonation_yef_com">BloodDonation@yef.com</string>
    <string name="instagram">Instagram</string>
    <string name="your_message">Your Message</string>
    <string name="description">Description</string>
    <string name="hospital_name_and_location">Hospital Name and Location</string>
    <string name="_9015901668">9015901668</string>
    <string name="help">Help</string>
    <string name="rate_app">Rate App</string>
    <string name="tools">Tools</string>
    <string name="contactus">ContactUs</string>
    <string name="callus">CallUs</string>
    <string name="userdetails">UserDetails</string>
    <string name="yefindia_gmail_com">yefindia@gmail.com</string>
    <string name="settings">Settings</string>
    <string name="mail">Mail</string>
    <string name="sign_out1">Sign Out</string>
    <string name="youth_empowerment_foundation1">YOUTH EMPOWERMENT FOUNDATION</string>
    <string name="title_activity_main" />
    <string name="postbloodrequest">PostBloodRequest</string>
    <string name="blooddetails">Blooddetails</string>
    <string name="username">UserName:</string>
    <string name="your_email">Your Email</string>
    <string name="textview">TextView</string>
    <string name="your_name">Your Name</string>
    <string name="email_id">email id</string>
    <string name="my_name">My Name</string>
    <string name="powered_by_yef">Powered By YEF</string>
    <string name="powered_by_yef1">powered_by_yef......</string>
    <string name="poweredbyyef1">poweredbyyef1</string>
    <string name="search">search</string>
    <string name="myprofile">MyProfile</string>
    <string name="myprofilee">Myprofile</string>
    <string name="select_blood_group">Select Blood Group</string>
    <string name="spinner_title" >Select Blood Group</string>
    <string name="enter_blood_type_required">Enter Blood Type Required</string>
    <string name="todo">TODO</string>
    <string name="blood_donation_by_yef">Blood Donation by YEF</string>
    <string name="remove">Remove</string>
    <string name="mobile">Mobile</string>
    <string name="address3">Address</string>
    <string name="article_title">Article Title</string>
    <string name="article_subtitle">Article Subtitle</string>
    <string name="change_to_article_text">Change to Article text</string>
    <string name="youth_empowerment_foundation">Youth Empowerment Foundation</string>
    <string name="aboutus">AboutUs</string>
    <string name="youth_empowerment_foundation3">YOUTH EMPOWERMENT FOUNDATION</string>
    <string name="article">article</string>
    <string name="SoftSkills" />
    <string name="skillss">\t\t\t A skill is the ability to carry out a task with determined results often within a given amount of time,energy, or both.
Skill usually requires certain environmental stimuli and situations to assess the level of skill being shown and used.
\n\t\t\t Soft skills are the combination of people skills, social skills, communication skills,
emotional intelligence and personality traits that make it easy to get along and work harmoniously with other people.
\n\t\t\t Soft skills can be taught,but they are not as straightforward as hard skills:
those specific qualities and skills that can be clearly defined, measured, and taught for success in a job.
\n\t\t\t\t  Hard skills can be quantified and advanced.You can learn advanced mathematics or writing skills, and you can get better at shipping code.But when it comes to soft skills things like small talk, empathy, and flexibility it is not as straightforward.
That does not mean soft skills are not worth investing in and practicing.
\n\t\t You need hard skills to land a job, but you need soft skills to progress in your career.
So we have rounded up a list of the soft skills most critical to building a successful career and how you can brush up on them.
\t\t\t\n <b><u>Soft skills for your career are:</u></b>
<b>\n1.Communication
\n2.Self-Motivation
\n3.Leadership
\n4.Responsibility
\n5.TeamWork
\n6.Problem Solving
\n7.Decision Making
\n8.Time Management
\n9.Flexibility
\n10.Conflict Resolution</b>
</string>
    <string name="click_here_to_learn_softskills" />
    <string name="click_here_to_learn_softskills4">click_here_to_learn_softskills</string>
    <string name="softskills1">SoftSkills</string>
    <string name="ss">Click Here to Learn SoftSkills</string>
    <string name="title_activity_post_feed" />
    <string name="soft_skills_by_yef">Soft Skills by YEF...</string>
    <string name="emailid">EmailId</string>
    <string name="post_a_job_opening">Post a Job opening</string>
    <string name="job_title">Job Title</string>
</resources>