<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_register"
    tools:context=".Myprofile">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="209dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/picture" />

        <TextView
            android:id="@+id/useremail"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:gravity="center_vertical|center_horizontal"
            android:text="@string/email_id"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userid"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/my_name"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/usermobile"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:gravity="center_vertical|center_horizontal"
            android:text="@string/mobile_number"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>