<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="0.0dp"
        android:text="@string/softskills1"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp"
        android:textStyle="bold" />


    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="fill_parent"
        android:layout_height="272dp"
        android:layout_below="@id/title"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/article"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="0.0dp"
            android:text="@string/skillss"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="normal" />
    </ScrollView>


    <Button
        android:id="@+id/softbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="150dp"
        android:background="#7ea19c"
        android:text="@string/ss" />

</RelativeLayout>